--- a/todo.txt
+++ b/todo.txt
@@ -7,8 +7,9 @@ Let users suggest fixes to the website or database
 
 Add description for information pages
 
+
 5.5.0
-Make <Link> tags use client-side routing instead of server side
+Amplitude Session Replay
 
 6.0.0
 Compress json values
