--- a/todo.txt
+++ b/todo.txt
@@ -1,9 +1,12 @@
 5.6.0
 Add compression to the comparison links
+Lazy import button functions
+Add progress bar to comparison product selection screen
+
+5.7.0
 Let users request a product or category
 Let users suggest fixes to the website or database
-
-6.0.0
 Compress json values
 
+6.0.0
 Compress firestore data
