--- a/todo.txt
+++ b/todo.txt
@@ -9,4 +9,15 @@ Let users suggest fixes to the website or database
 Compress json values
 
 6.0.0
+Add performance calculator for cars and computers
+
+For cars, let users select an existing vehicle from the database.
+If any data is missing, they must fill out the data.
+User's can also modify parts.
+Then calculate peformance in a variety of tests that the user can select.
+
+For computers, let users change cpu, gpu, ram, resolution and program, then 
+let them choose a game/program to calculate peformance in
+
+7.0.0
 Compress firestore data
