--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,8 @@
-6.5.0
-Put firebase query functions for comparison pages in their own files
-
 6.6.0
+Put firebase query functions for comparison pages in their own files
+Split modals in lazy imports where possible
+
+6.7.0
 Add regional languages, fallback language is english
 
 7.0.0
