--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,7 @@
+6.6.6
+Add share button to prediction screen
+Rethink how to do 'Collectible' rate adjustment for price predictions
+
 6.7.0
 Add regional languages, fallback language is english
 
