--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,6 @@
-6.8.2
-Split modals in lazy imports where possible
+6.8.3
+Look into improving price prediction algorithm
+Try to lazy import chartjs (Maybe display an image until user interacts with it)
 
 7.0.0
 Rehaul comparison screen
