--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,8 @@
 7.1.0
 Rehaul comparison screen
+Try to make prediction scree more appealing
+
+7.2.0
 Add top, side and back view of vehicle sizes
 
 8.0.0
