--- a/todo.txt
+++ b/todo.txt
@@ -1,9 +1,6 @@
-7.1.0
-Rehaul comparison screen
-Try to make prediction screen more appealing
-
 7.2.0
 Add top, side and back view of vehicle sizes
+Put product selection for compare and predict pages inside a modal with dropdown selectors
 
 8.0.0
 Add performance calculator for cars and computers
