--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,7 @@
 7.2.0
 Add top, side and back view of vehicle sizes
 Put product selection for compare and predict pages inside a modal with dropdown selectors
+Put all footers back to their pages
 
 8.0.0
 Add performance calculator for cars and computers
