--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,7 @@
 7.3.0
 Change prediction page initial price to current price, and work backward from that year and forward too
-Let user rename graph items
 Price division based prediction, if high, then rate is lower, if low, rate is higher
+Fix export csv when exporting multiple items
 
 7.4.0
 Add top, side and back view of vehicle sizes
@@ -10,6 +10,7 @@ Get database data for comparison screen from Cloudflare by using lazy imports in
 
 7.5.0
 Add trending predictions to home page
+Make edit modal look better
 
 8.0.0
 Add performance calculator for cars and computers
