--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,7 @@
 7.3.0
 Change prediction page initial price to current price, and work backward from that year and forward too
 Price division based prediction, if high, then rate is lower, if low, rate is higher
-Fix export csv when exporting multiple items
+Fix export csv when exporting multiple items, it puts the year in second row
 
 7.4.0
 Add top, side and back view of vehicle sizes
