Algorithm changes and stuff

--- a/todo.txt
+++ b/todo.txt
@@ -2,6 +2,8 @@
 Change prediction page initial price to current price, and work backward from that year and forward too
 Price division based prediction, if high, then rate is lower, if low, rate is higher
 Make price drop off harder in first 2 years
+Add KTM Motorcycles
+Put rate adjustments in the add item modal
 
 7.4.0
 Add top, side and back view of vehicle sizes
