--- a/todo/todo.txt
+++ b/todo/todo.txt
@@ -1,8 +1,5 @@
-7.4.0
-Price division based prediction, if high, then rate is lower, if low, rate is higher
-Make price drop off harder in first 2 years
-
 7.5.0
+Remove reverse values
 Add top, side and back view of vehicle sizes
 Put product selection for compare and predict pages inside a modal with dropdown selectors
 Get database data for comparison screen from Cloudflare by using lazy imports instead of calling from firebase
