--- a/todo/todo.txt
+++ b/todo/todo.txt
@@ -7,6 +7,7 @@ Get database data for comparison screen from Cloudflare by using lazy imports in
 7.6.0
 Add trending predictions to home page
 Make edit modal look better
+Improve price prediction algorithm, forward and backward
 
 8.0.0
 Add performance calculator for cars and computers
