--- a/todo/todo.txt
+++ b/todo/todo.txt
@@ -1,6 +1,6 @@
 7.5.0
 Add top, side and back view of vehicle sizes
-Put product selection for compare and predict pages inside a modal with dropdown selectors
+Add Search bar to add items to comparison screen
 Get database data for comparison screen from Cloudflare by using lazy imports instead of calling from firebase
 
 7.6.0
